--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body { margin: 0; font-size: 1em; font-family:Questrial, sans-serif; line-height
 
 a { color: #00e; text-decoration:none; }
 a:focus { outline: thin dotted; }
-a:hover, a:active { outline: 0; }
+a:hover, a:active { outline: 0; padding: 0 }
 
 abbr[title] { border-bottom: 1px dotted; }
 b, strong { font-weight: bold; }
